--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
           This website has some awesome subtext that goes here under the main
           title. It's a smaller font and the color is lower contrast
         </p>
-        <button>Sign up</button>
+        <button class="blue_bg" id="header_button">Sign up</button>
       </div>
       <div class="item_r" id="image"><p>This is a placeholder image.</p></div>
     </div>
     <div id="info">
       <h2>Some Random Information</h2>
       <div id="info-items-container">
+        <div class="info-item">
+          <div class="info_img"></div>
+          <p>this is some subtext under and illustration or image</p>
+        </div>
         <div class="info-item">
           <div class="info_img"></div>
           <p>this is some subtext under and illustration or image</p>
@@ -49,12 +53,16 @@
         just filling up space, or maybe people will actually read it. Who knows?
         All I know is that it looks nice.
       </p>
-      <p>-Thor, God of Thunder</p>
+      <p id="quote_signature">-Thor, God of Thunder</p>
     </div>
-    <div id="signup">
-      <p>Call to action! It's time!</p>
-      <p>Sign up for our product by clicking that button right over there!</p>
-      <button>Sign up</button>
+    <div id="signup" class="blue_bg">
+      <div>
+        <p class="signup_head">Call to action! It's time!</p>
+        <p class="signup_foot">
+          Sign up for our product by clicking that button right over there!
+        </p>
+      </div>
+      <button id="footer_button">Sign up</button>
     </div>
   </body>
   <footer>
